--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/white"
             android:orientation="vertical"
             android:padding="16dp">
 
@@ -60,12 +61,12 @@
 
                 <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/player_name"
-                    android:inputType="text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Name"
+                    android:inputType="text"
                     android:textColor="#363A43"
-                    android:textColorHint="#7A8089"></androidx.appcompat.widget.AppCompatEditText>
+                    android:textColorHint="#7A8089" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <Button
@@ -75,9 +76,8 @@
                 android:layout_marginTop="16dp"
                 android:background="@color/colorPrimary"
                 android:text="Start"
-                android:textSize="18sp"
                 android:textColor="@android:color/white"
-                ></Button>
+                android:textSize="18sp"></Button>
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
