--- a/app/src/main/res/layout/activity_quiz_questions.xml
+++ b/app/src/main/res/layout/activity_quiz_questions.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
+    android:background="@color/white"
     tools:context=".QuizQuestionsActivity">
 
     <LinearLayout
@@ -49,6 +50,7 @@
                 android:max="10"
                 android:minHeight="50dp"
                 android:progress="0" />
+
             <TextView
                 android:id="@+id/tv_progress"
                 android:layout_width="wrap_content"
@@ -57,7 +59,7 @@
                 android:padding="15dp"
                 android:textColorHint="#7A8089"
                 android:textSize="14sp"
-                tools:text="0/10"/>
+                tools:text="0/10" />
         </LinearLayout>
 
         <TextView
@@ -117,6 +119,6 @@
             android:text="Submit"
             android:textColor="@android:color/white"
             android:textSize="18sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
     </LinearLayout>
 </ScrollView>
